[package]
name = "libp2p-workshop-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4"
