[package]
name = "libp2p-workshop-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asynchronous-codec = { version = "0.6" }
async-std = { version = "1.6", features = ["attributes"] }
async-trait = "0.1.57"
bytes = { version = "1" }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3"
futures-timer = "3.0.2"
# TODO: Consider reducing feature set.
libp2p = { version = "0.49.0", features = ["full"] }
log = "0.4"
prost = "0.11"
unsigned-varint = { version = "0.7", features = ["asynchronous_codec"] }

[build-dependencies]
prost-build = "0.11"

